# sentifer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
projects/eskada/: CMakeLists.txt
projects/eskada/include/: eskada.h
projects/eskada/tests/: CMakeLists.txt  main.cpp
projects/sentifer_memnager/: memnager.h  sentifer_memnager.sln  sentifer_memnager.vcxproj  sentifer_memnager.vcxproj.filters
projects/sentifer_memnager/example/: example.vcxproj  example.vcxproj.filters  main.cpp
projects/sentifer_mtbase/: CMakeLists.txt  CMakeSettings.json
projects/sentifer_mtbase/examples/: CMakeLists.txt  main.cpp
projects/sentifer_mtbase/include/sentifer_mtbase/: mtbase.h  mtbase.hpp
projects/sentifer_mtbase/include/sentifer_mtbase/details/: base_structures.hpp  clocks.hpp  control_block.h  memory_managers.hpp  mtbase_assert.h  scheduler.hpp  scheduler_restriction.h  task_allocator.hpp  task_storage.hpp  tasks.hpp  type_utils.hpp
projects/sentifer_mtbase/include/sentifer_mtbase/details/schedulables/: schedulable_object.hpp
projects/sentifer_mtbase/include/sentifer_mtbase/details/schedulers/: invocable_scheduler.h  object_flush_scheduler.h  object_scheduler.h  sized_object_scheduler.hpp  thread_local_scheduler.h  transaction_scheduler.h
projects/sentifer_mtbase/include/sentifer_mtbase/details/task_storages/: object_flush_scheduler.h  object_scheduler.h  object_scheduler.hpp  object_scheduler_distributor.h  thread_local_scheduler.h
projects/sentifer_mtbase/lib/cmake/sentifer_multi_thread_base/: sentifer_multi_thread_baseConfig.cmake
projects/sentifer_mtbase/src/: base_structures.cpp  control_block.cpp  mtbase_assert.cpp  object_flush_scheduler.cpp  object_scheduler.cpp  src.cpp  tasks.cpp  thread_local_scheduler.cpp
projects/sentifer_mtbase/tests/: CMakeLists.txt  main.cpp
projects/sentifer_multi_thread_base/lib/cmake/sentifer_multi_thread_base/: sentifer_multi_thread_baseTargets-debug.cmake  sentifer_multi_thread_baseTargets.cmake
